force-app/main/default/objects/RE_External_Exchange_Rate__c/RE_External_Exchange_Rate__c.object-meta.xml
<CustomObject>
    <label>RE External Exchange Rate</label>
    <nameField>
        <displayFormat>RFX-{0000000000}</displayFormat>
        <label>RE External Exchange Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE External Exchange Rate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>