force-app/main/default/objects/RE_External_Exchange_Rate__c/fields/RE_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>