force-app/main/default/objects/RE_External_Exchange_Rate__c/fields/RE_Exchange_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Exchange_Rate_Type__c</fullName>
    <label>Exchange Rate Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>