force-app/main/default/objects/RE_External_Exchange_Rate__c/fields/RE_From_Currency__c.field-meta.xml
<CustomField>
    <fullName>RE_From_Currency__c</fullName>
    <label>From Currency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>