force-app/main/default/objects/RE_External_Exchange_Rate__c/fields/RE_Last_Action_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>RE_Last_Action_Timestamp__c</fullName>
    <label>Last Action Timestamp</label>
    <length>19</length>
    <type>Text</type>
</CustomField>