force-app/main/default/objects/RE_External_Exchange_Rate__c/fields/RE_Rate__c.field-meta.xml
<CustomField>
    <fullName>RE_Rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>