force-app/main/default/objects/RE_External_Exchange_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Effective_Date__c</columns>
    <columns>RE_Exchange_Rate_Type__c</columns>
    <columns>RE_Rate__c</columns>
    <columns>RE_From_Currency__c</columns>
    <columns>RE_To_Currency__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_To_Currency__c</field>
        <operation>equals</operation>
        <value>PHP</value>
    </filters>
    <label>All</label>
</ListView>